kubernetes/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: microservices
  labels:
    app.kubernetes.io/managed-by: kubectl
    environment: dev
